gitops/coffee-shop/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: coffee-shop
    app.kubernetes.io/component: coffee-shop
    app.kubernetes.io/instance: coffee-shop
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
  name: coffee-shop
  namespace: coffee-shop-dev
spec:
  clusterIP: 172.21.8.96
  clusterIPs:
  - 172.21.8.96
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    app.kubernetes.io/part-of: coffee-shop
    app.openshift.io/runtime: quarkus
    deployment: coffee-shop
